syntax = "proto3";

package test.integration.filters;

message TestNetworkAsyncTcpFilterConfig {
  string cluster_name = 1;
  bool kill_after_on_data = 2;
}
